# figerspot-svelte

./: package.json  pnpm-lock.yaml  svelte.config.ts
src/: App.svelte  maincreen.svelte  style.css  type.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: crud.rs  csv_in.rs  csv_out.rs  main.rs
src/lib/: Greet.svelte  Inspect.svelte  power.svelte
