[package]
name = "svelte-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
chrono = "0.4.23"
csv = "1.1.6"
reqwest = { version = "0.11", features = ["json","multipart"] }
serde = { version = "1.0", features = ["derive"] }
tauri = {version = "1.2", features = ["api-all"] }


[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]


